added simple unit tests

--- a/innosabi-api/.env
+++ b/innosabi-api/.env
@@ -15,6 +15,6 @@ DB_DATABASE=innosabi_data
 DB_USERNAME=root
 DB_PASSWORD=1231234
 
-CACHE_DRIVER=file
+CACHE_DRIVER=array
 QUEUE_CONNECTION=sync
 JWT_SECRET=base64:qtZqV1Jjaa8fgQpoVWW3zUA3851GlmE4deCxham1xBW=
